--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -330,11 +330,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cfn_003e-_002e"><code>&lt;fn&gt;
+      "dtk_002dspeak.html#index-_003cfn_003e-_002e"><code>&lt;fn&gt;
       .</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      "dtk_002dspeak.html">dtk-speak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -465,15 +465,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-_003cfn_003e-_003c_0028deletechar_003e">
-      <code>&lt;fn&gt; &lt;(deletechar&gt;</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-_003cfn_003e-_003cC_002dleft_003e">
       <code>&lt;fn&gt; &lt;C-left&gt;</code></a>:</td>
       <td>&nbsp;</td>
@@ -485,15 +476,6 @@
       <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-_003cfn_003e-_003cC_002dright_003e">
       <code>&lt;fn&gt; &lt;C-right&gt;</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-_003cfn_003e-_003cdelete_003e">
-      <code>&lt;fn&gt; &lt;delete&gt;</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
@@ -731,15 +713,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-_003cfn_003e-C_002dM_002db">
-      <code>&lt;fn&gt; C-M-b</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -1598,6 +1571,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dspeak.html#index-_003cfn_003e-f"><code>&lt;fn&gt;
+      f</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002depub.html#index-_003cfn_003e-g"><code>&lt;fn&gt;
       g</code></a>:</td>
       <td>&nbsp;</td>
@@ -1720,15 +1702,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dpronounce.html">emacspeak-pronounce</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-_003cfn_003e-M_002df"><code>
-      &lt;fn&gt; M-f</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3250,6 +3223,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002d_003b-C_002dj"><code>C-;
+      C-j</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dfeeds.html#index-C_002d_003b-C_002du"><code>C-;
       C-u</code></a>:</td>
       <td>&nbsp;</td>
@@ -3271,15 +3253,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dorg.html">emacspeak-org</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-C_002d_003b-j"><code>C-;
-      j</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3690,11 +3663,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002de-_002e"><code>C-e
+      "dtk_002dspeak.html#index-C_002de-_002e"><code>C-e
       .</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      "dtk_002dspeak.html">dtk-speak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3833,15 +3806,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-C_002de-_003c_0028deletechar_003e">
-      <code>C-e &lt;(deletechar&gt;</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002de-_003cC_002dleft_003e">
       <code>C-e &lt;C-left&gt;</code></a>:</td>
       <td>&nbsp;</td>
@@ -3853,15 +3817,6 @@
       <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002de-_003cC_002dright_003e">
       <code>C-e &lt;C-right&gt;</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-C_002de-_003cdelete_003e"><code>
-      C-e &lt;delete&gt;</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
@@ -4149,15 +4104,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-C_002de-C_002dM_002db"><code>
-      C-e C-M-b</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -5255,6 +5201,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dspeak.html#index-C_002de-f-1"><code>C-e
+      f</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002depub.html#index-C_002de-g"><code>C-e
       g</code></a>:</td>
       <td>&nbsp;</td>
@@ -5419,15 +5374,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dpronounce.html">emacspeak-pronounce</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-C_002de-M_002df"><code>C-e
-      M-f</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6678,6 +6624,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dx-_0040-h-C_002dj"><code>
+      C-x @ h C-j</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dfeeds.html#index-C_002dx-_0040-h-C_002du"><code>
       C-x @ h C-u</code></a>:</td>
       <td>&nbsp;</td>
@@ -6700,15 +6655,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dorg.html">emacspeak-org</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-C_002dx-_0040-h-j"><code>C-x
-      @ h j</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
