--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -648,10 +648,10 @@ was spoken.  Any other key continues to speak the buffer.
     Command: <strong>emacspeak-speak-current-field</strong></dt>
     <dd>
       <dl compact="compact">
-        <dt><kbd>C-e .</kbd></dt>
-        <dd><span id="index-C_002de-_002e"></span></dd>
-        <dt><kbd>&lt;fn&gt; .</kbd></dt>
-        <dd><span id="index-_003cfn_003e-_002e"></span></dd>
+        <dt><kbd>C-e f</kbd></dt>
+        <dd><span id="index-C_002de-f-1"></span></dd>
+        <dt><kbd>&lt;fn&gt; f</kbd></dt>
+        <dd><span id="index-_003cfn_003e-f"></span></dd>
       </dl><span id=
       "index-emacspeak_002dspeak_002dcurrent_002dfield-1"></span>
       <div class="format">
