--- a/manual/Emacspeak-Commands-And-Options.html
+++ b/manual/Emacspeak-Commands-And-Options.html
@@ -1582,6 +1582,13 @@
     </tr>
     <tr>
       <td align="left" valign="top">• <a href=
+      "voice_002ddefs.html">voice-defs</a></td>
+      <td>&nbsp;&nbsp;</td>
+      <td align="left" valign="top">Define voices for
+      voice-lock.</td>
+    </tr>
+    <tr>
+      <td align="left" valign="top">• <a href=
       "voice_002dsetup.html">voice-setup</a></td>
       <td>&nbsp;&nbsp;</td>
       <td align="left" valign="top">Setup voices for
