--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on December 22,
+  Desktop</strong> and was last updated on December 23,
   2020.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -11163,19 +11163,30 @@
           "toy_002dbraille.html#toy_002dbraille" name=
           "toc-toy_002dbraille-1">12.228 toy-braille</a></li>
           <li>
+            <a id="toc-voice_002ddefs-1" href=
+            "voice_002ddefs.html#voice_002ddefs" name=
+            "toc-voice_002ddefs-1">12.229 voice-defs</a>
+            <ul class="no-bullet">
+              <li><a id="toc-voice_002ddefs-Options" href=
+              "voice_002ddefs.html#voice_002ddefs-Options" name=
+              "toc-voice_002ddefs-Options">12.229.1 voice-defs
+              Options</a></li>
+            </ul>
+          </li>
+          <li>
             <a id="toc-voice_002dsetup-1" href=
             "voice_002dsetup.html#voice_002dsetup" name=
-            "toc-voice_002dsetup-1">12.229 voice-setup</a>
+            "toc-voice_002dsetup-1">12.230 voice-setup</a>
             <ul class="no-bullet">
               <li>
                 <a id="toc-Voice_002dSetup-Commands" href=
                 "voice_002dsetup.html#Voice_002dSetup-Commands"
-                name="toc-Voice_002dSetup-Commands">12.229.1
+                name="toc-Voice_002dSetup-Commands">12.230.1
                 Voice-Setup Commands</a>
                 <ul class="no-bullet">
                   <li><a id="toc-voice_002dlock_002dmode" href=
                   "voice_002dsetup.html#voice_002dlock_002dmode"
-                  name="toc-voice_002dlock_002dmode">12.229.1.1
+                  name="toc-voice_002dlock_002dmode">12.230.1.1
                   voice-lock-mode</a></li>
                   <li><a id=
                   "toc-voice_002dlock_002dmode_002d_002dturn_002don"
@@ -11183,14 +11194,14 @@
                   "voice_002dsetup.html#voice_002dlock_002dmode_002d_002dturn_002don"
                   name=
                   "toc-voice_002dlock_002dmode_002d_002dturn_002don">
-                  12.229.1.2 voice-lock-mode–turn-on</a></li>
+                  12.230.1.2 voice-lock-mode–turn-on</a></li>
                   <li><a id=
                   "toc-voice_002dsetup_002ddescribe_002dpersonality"
                   href=
                   "voice_002dsetup.html#voice_002dsetup_002ddescribe_002dpersonality"
                   name=
                   "toc-voice_002dsetup_002ddescribe_002dpersonality">
-                  12.229.1.3
+                  12.230.1.3
                   voice-setup-describe-personality</a></li>
                   <li><a id=
                   "toc-voice_002dsetup_002dtoggle_002dsilence_002dpersonality"
@@ -11198,50 +11209,50 @@
                   "voice_002dsetup.html#voice_002dsetup_002dtoggle_002dsilence_002dpersonality"
                   name=
                   "toc-voice_002dsetup_002dtoggle_002dsilence_002dpersonality">
-                  12.229.1.4
+                  12.230.1.4
                   voice-setup-toggle-silence-personality</a></li>
                 </ul>
               </li>
               <li><a id="toc-voice_002dsetup-Options" href=
               "voice_002dsetup.html#voice_002dsetup-Options" name=
-              "toc-voice_002dsetup-Options">12.229.2 voice-setup
+              "toc-voice_002dsetup-Options">12.230.2 voice-setup
               Options</a></li>
             </ul>
           </li>
           <li>
             <a id="toc-xbacklight-1" href=
             "xbacklight.html#xbacklight" name=
-            "toc-xbacklight-1">12.230 xbacklight</a>
+            "toc-xbacklight-1">12.231 xbacklight</a>
             <ul class="no-bullet">
               <li>
                 <a id="toc-Xbacklight-Commands" href=
                 "xbacklight.html#Xbacklight-Commands" name=
-                "toc-Xbacklight-Commands">12.230.1 Xbacklight
+                "toc-Xbacklight-Commands">12.231.1 Xbacklight
                 Commands</a>
                 <ul class="no-bullet">
                   <li><a id="toc-xbacklight_002dblack" href=
                   "xbacklight.html#xbacklight_002dblack" name=
-                  "toc-xbacklight_002dblack">12.230.1.1
+                  "toc-xbacklight_002dblack">12.231.1.1
                   xbacklight-black</a></li>
                   <li><a id="toc-xbacklight_002ddecrement" href=
                   "xbacklight.html#xbacklight_002ddecrement" name=
-                  "toc-xbacklight_002ddecrement">12.230.1.2
+                  "toc-xbacklight_002ddecrement">12.231.1.2
                   xbacklight-decrement</a></li>
                   <li><a id="toc-xbacklight_002dget" href=
                   "xbacklight.html#xbacklight_002dget" name=
-                  "toc-xbacklight_002dget">12.230.1.3
+                  "toc-xbacklight_002dget">12.231.1.3
                   xbacklight-get</a></li>
                   <li><a id="toc-xbacklight_002dincrement" href=
                   "xbacklight.html#xbacklight_002dincrement" name=
-                  "toc-xbacklight_002dincrement">12.230.1.4
+                  "toc-xbacklight_002dincrement">12.231.1.4
                   xbacklight-increment</a></li>
                   <li><a id="toc-xbacklight_002dset" href=
                   "xbacklight.html#xbacklight_002dset" name=
-                  "toc-xbacklight_002dset">12.230.1.5
+                  "toc-xbacklight_002dset">12.231.1.5
                   xbacklight-set</a></li>
                   <li><a id="toc-xbacklight_002dwhite" href=
                   "xbacklight.html#xbacklight_002dwhite" name=
-                  "toc-xbacklight_002dwhite">12.230.1.6
+                  "toc-xbacklight_002dwhite">12.231.1.6
                   xbacklight-white</a></li>
                 </ul>
               </li>
@@ -11249,7 +11260,7 @@
           </li>
           <li><a id="toc-URL-Templates-1" href=
           "URL-Templates.html#URL-Templates" name=
-          "toc-URL-Templates-1">12.231 URL Templates</a></li>
+          "toc-URL-Templates-1">12.232 URL Templates</a></li>
         </ul>
       </li>
       <li><a id="toc-Emacspeak-Keyboard-Commands_002e" href=
