--- a/manual/toy_002dbraille.html
+++ b/manual/toy_002dbraille.html
@@ -23,8 +23,7 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="voice_002dsetup.html" rel="next" title=
-  "voice-setup" />
+  <link href="voice_002ddefs.html" rel="next" title="voice-defs" />
   <link href="tetris.html" rel="prev" title="tetris" />
   <style type="text/css">
   /*<![CDATA[*/
@@ -52,8 +51,8 @@
 <body lang="en" xml:lang="en">
   <span id="toy_002dbraille"></span>
   <div class="header">
-    <p>Next: <a href="voice_002dsetup.html" accesskey="n" rel=
-    "next">voice-setup</a>, Previous: <a href="tetris.html"
+    <p>Next: <a href="voice_002ddefs.html" accesskey="n" rel=
+    "next">voice-defs</a>, Previous: <a href="tetris.html"
     accesskey="p" rel="prev">tetris</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
