--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -218,15 +218,9 @@ program. Port defaults to dtk-local-server-port
     <strong>dtk-select-server</strong> <em>(program &amp;optional
     device)</em></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e d d</kbd></dt>
-        <dd><span id="index-C_002de-d-d-1"></span></dd>
-        <dt><kbd>&lt;fn&gt; d d</kbd></dt>
-        <dd><span id="index-_003cfn_003e-d-d"></span></dd>
-      </dl><span id="index-dtk_002dselect_002dserver-2"></span>
+      <span id="index-dtk_002dselect_002dserver-2"></span>
       <div class="format">
         <pre class="format">Select a speech server interactively.
-When called interactively, restarts speech server.
 Argument PROGRAM specifies the speech server program.
  Optional arg device sets up environment variable
 ALSA_DEFAULT to specified device before starting the server.
